@@ -61,8 +61,9 @@ char *hpd_up =
         "                           Use -f to overwrite existing entries\n"
         "  -r [-u]               Rebuild dirlog based on filesystem data\n"
         "                           .folders file (see MANUAL) defines a list of dirs in SITEROOT to scan\n"
-        "                           -u only imports new records and does not truncate existing dirlog\n"
-        "                           -f ignores .folders file and does a full recursive scan\n"
+        "                           -u - only import new records and do not truncate existing dirlog\n"
+        "                           -f - ignore .folders file and do a full recursive scan\n"
+        "                           --indepth - scans each imported directory recursivelly\n"
         "  -c, --check [--fix] [--ghost]\n"
         "                        Compare dirlog and filesystem records and warn on differences\n"
         "                          --fix attempts to correct dirlog/filesystem\n"
